# RobustMultilinearModel

./: .gitattributes  CMakeLists.txt  README.md
Example/: CorrFileCollection.txt  Id_1_Exp1.tps  Id_1_Exp3.tps  Id_2_Exp1.tps  Id_2_Exp2.tps  Id_3_Exp1.tps  Id_3_Exp2.tps  Id_3_Exp3.tps  Id_4_Exp1.tps  Id_4_Exp2_Corr.off  Id_4_Exp2_Corr.tlmk  Id_4_Exp3.tps  LmksAll_Indices.txt  Run_RMM.cmd
RMM/: CMakeLists.txt  DataContainer.h  Definitions.h  ExpressionPermutationSA.cpp  ExpressionPermutationSA.h  FileLoader.cpp  FileLoader.h  FileWriter.cpp  FileWriter.h  KDTree3.cpp  KDTree3.h  MDLHelper.cpp  MDLHelper.h  MDLShapeCostFunction.cpp  MDLShapeCostFunction.h  Main.cpp  MathHelper.cpp  MathHelper.h  MultilinearModel.cpp  MultilinearModel.h  PerformanceCounter.cpp  PerformanceCounter.h  RelabelMultilinearData.cpp  RelabelMultilinearData.h  TensorCompletionCostFunction.cpp  TensorCompletionCostFunction.h  VectorNX.h
